package com.academiadev.domain.entities;

public abstract class User {
    protected String name;
    protected String email;

    public User(String name, String email) {
        this.name = name;
        this.email = email;
    }
    public String getEmail() { return email; }
    public String getName() { return name; }
}