package com.academiadev.domain.enums;
public enum CourseStatus { ACTIVE, INACTIVE; }