package com.academiadev.domain.enums;

public enum SubscriptionPlan {
    BASIC, PREMIUM;
}